# langchain-rust

./: .gitignore  Cargo.toml  README.md
examples/: agent.rs  conversational_chain.rs  conversational_retriever_chain_with_vector_store.rs  conversational_retriever_simple_chain.rs  dynamic_semantic_routes.rs  embedding_azure_open_ai.rs  embedding_openai.rs  git_commits.rs  llm_anthropic_claude.rs  llm_azure_open_ai.rs  llm_chain.rs  llm_ollama.rs  llm_openai.rs  open_ai_tools_agent.rs  qa_chain.rs  rcommiter.rs  semantic_routes.rs  sequential_chain.rs  simple_chain.rs  speech2text_openai.rs  sql_chain.rs  streaming_from_chain.rs  text_to_speech.rs  vector_store_postgres.rs  vision_llm_chain.rs  wolfram_tool.rs
macros/: Cargo.toml
macros/src/: attr.rs  chain_input.rs  chain_output.rs  check_type.rs  crate_path.rs  derive_chain_input.rs  derive_chain_output.rs  derive_ctor.rs  field.rs  helpers.rs  lib.rs  rename.rs
src/: lib.rs
src/agent/: agent.rs  agent_input.rs  agent_output.rs  agent_step.rs  error.rs  executor.rs  helper.rs  mod.rs  validator.rs
src/agent/chat/: agent.rs  builder.rs  mod.rs  parse.rs  prompt.rs
src/agent/chat/instructor/: default.rs  instructor.rs  mod.rs  qwen3.rs
src/agent/chat/parse_helper/: extract_text.rs  is_malformed.rs  json.rs  mod.rs
src/agent/chat/tool_prompt/: default.rs  mod.rs  qwen3.rs
src/agent/executor/: execution_context.rs  execution_output.rs  executor.rs  mod.rs  options.rs  strategy.rs
src/agent/open_ai_tools/: agent.rs  builder.rs  prompt.rs
src/chain/: chain.rs  chain_input.rs  chain_output.rs  chain_trait.rs  ctor.rs  error.rs  llm_chain.rs  mod.rs  pure_chain.rs  question_answering.rs
src/chain/conversational/: builder.rs  chain.rs  input.rs  mod.rs  prompt_builder.rs
src/chain/conversational_retrieval_qa/: builder.rs  conversational_retrieval_qa.rs
src/chain/empty/: mod.rs
src/chain/llm/: builder.rs  chain.rs  mod.rs
src/chain/sequential/: add_chain.rs  builder.rs  chain.rs  mod.rs
src/chain/sql_database/: builder.rs  chain.rs  input.rs  mod.rs
src/chain/sql_datbase/: builder.rs  chain.rs  mod.rs
src/chain/stuff_documents/: builder.rs  chain.rs  mod.rs  prompt.rs
src/diary/: diary.rs  diary_step.rs  mod.rs  simple_diary.rs
src/document_loaders/: dir_loader.rs  error.rs  mod.rs
src/document_loaders/csv_loader/: csv_loader.rs
src/document_loaders/git_commit_loader/: git_commit_loader.rs
src/document_loaders/pandoc_loader/: pandoc_loader.rs
src/document_loaders/source_code_loader/: language_parsers.rs  source_code_loader.rs
src/embedding/: error.rs  mod.rs
src/embedding/openai/: openai_embedder.rs
src/instructor/: default.rs  instructor.rs  mod.rs  qwen3.rs
src/language_models/: error.rs  llm.rs  mod.rs  options.rs
src/llm/: error.rs  llm.rs  llm_output.rs  mod.rs
src/llm/claude/: client.rs  models.rs
src/llm/ollama/: openai.rs
src/llm/openai/: builder.rs  client.rs  helper.rs  mod.rs  models.rs  request.rs
src/memory/: dummy_memory.rs  memory.rs  mod.rs  simple_memory.rs  window_buffer.rs
src/output_parser/: error.rs  mod.rs  output_parser.rs  regex_parser.rs  simple_parser.rs
src/output_parser/parse_helper/: extract_text.rs  fix.rs  flatten_final_answer.rs  json.rs  mod.rs
src/schemas/: agent.rs  builder_error.rs  get_prompt.rs  input_variable.rs  message_type.rs  messages.rs  mod.rs  output_trace.rs  prompt.rs  step_func.rs  stream.rs  streaming_func.rs  tool_call.rs  with_usage.rs
src/schemas/agent_plan/: agent_event.rs  agent_result.rs  agent_step.rs  mod.rs
src/schemas/generate_result/: generate_result.rs  generate_result_content.rs  mod.rs  token_usage.rs  tool_call.rs
src/schemas/io_model/: chain_input.rs  chain_output.rs  ctor.rs  llm_output.rs  mod.rs  output_trace.rs  token_usage.rs
src/semantic_router/index/: memory_index.rs
src/semantic_router/route_layer/: builder.rs  error.rs  input.rs  mod.rs  route_layer.rs
src/template/: error.rs  message_template.rs  prompt_template.rs
src/tools/: describe_parameters.rs  error.rs  mod.rs  tool.rs  tool_dyn.rs  tool_function.rs  tool_input.rs  tool_internal.rs  tool_output.rs  tool_wrapper.rs  tools_vec.rs
src/tools/command_executor/: command_executor.rs
src/tools/mcp/: error.rs  helper.rs  mcp_service.rs  mcp_tool.rs  mcp_toolbox.rs  mod.rs
src/tools/scraper/: scraper.rs
src/tools/search/: article.rs
src/tools/search/duckduckgo/: duckduckgo_search.rs
src/tools/search/serpapi/: serpapi.rs
src/tools/sql/: sql.rs
src/tools/sql/postgres/: postgres.rs
src/tools/text2speech/openai/: client.rs
src/tools/tool_field/: array.rs  mod.rs  object.rs  parse_value.rs  tool_field.rs  tool_parameters.rs
src/tools/tool_field/primitives/: boolean.rs  integer.rs  number.rs  string.rs  trait.rs
src/tools/toolbox/: list_tools.rs  mod.rs  simple_toolbox.rs  toolbox.rs
src/tools/wolfram/: wolfram.rs
src/utils/: helper.rs
src/vectorstore/: mod.rs
src/vectorstore/opensearch/: builder.rs  opensearch.rs
src/vectorstore/pgvector/: builder.rs  pgvector.rs
src/vectorstore/qdrant/: builder.rs
src/vectorstore/sqlite_vec/: builder.rs  sqlite_vec.rs
src/vectorstore/sqlite_vss/: builder.rs  sqlite_vss.rs
src/vectorstore/surrealdb/: builder.rs  surrealdb.rs
